[gd_scene load_steps=9 format=3 uid="uid://muputklnbpx6"]

[ext_resource type="Script" uid="uid://blg5pw1mqe4pa" path="res://scripts/environment/pickup_items/tooth.gd" id="1_86j16"]
[ext_resource type="Texture2D" uid="uid://cwn6db61iiefk" path="res://assets/sprites/tooth/tooth.png" id="2_ug5rn"]
[ext_resource type="AudioStream" uid="uid://dvd126w1ojxt8" path="res://assets/sounds/sfx/item_pickup/item_pickup.wav" id="3_86j16"]

[sub_resource type="BoxShape3D" id="BoxShape3D_86j16"]
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_0van4"]
size = Vector3(0.2, 0.2, 0.2)

[sub_resource type="Animation" id="Animation_6rsou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0van4"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_go8sj"]
_data = {
&"RESET": SubResource("Animation_6rsou"),
&"default": SubResource("Animation_0van4")
}

[node name="Tooth" type="RigidBody3D"]
collision_layer = 32
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_86j16")
metadata/_custom_type_script = "uid://cbnobhcm1siq6"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
shaded = true
texture_filter = 0
texture = ExtResource("2_ug5rn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_86j16")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="InteractionCollision" type="CollisionShape3D" parent="InteractionArea"]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_0van4")

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_86j16")
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_go8sj")
}
autoplay = "default"

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
